--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,4 +34,8 @@ models:
     +materialized: view
     marts:
       marketing:
+        +schema: marts
         +materialized: table
+    staging:
+      +schema: staging
+      +materialized: view
